# FileIndexer

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  FileIndexer.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
FileIndexer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FileIndexer.vcxproj  FileIndexer.vcxproj.filters  Main.cpp  Main.h  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
FileIndexer/Release/test directory1/: file-2.txt
FileIndexer/include/: FileIndex.h
FileIndexer/source/: FileIndex.cpp
UnitTests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters  cmake_install.cmake  pch.cpp.vcxproj  pch.cpp.vcxproj.filters  test.cpp
